APIs/azure.com/cognitiveservices-TextAnalytics/v2.1/python-client/README.md
# openapi-client
The Text Analytics API is a suite of text analytics web services built with best-in-class Microsoft machine learning algorithms. The API can be used to analyze unstructured text for tasks such as sentiment analysis, key phrase extraction and language detection. No training data is needed to use this API; just bring your text data. This API uses advanced natural language processing techniques to deliver best in class predictions. Further documentation can be found in https://docs.microsoft.com/en-us/azure/cognitive-services/text-analytics/overview

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2.1
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://azure.microsoft.com/en-us/services/cognitive-services/text-analytics/](https://azure.microsoft.com/en-us/services/cognitive-services/text-analytics/)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://azure.local
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://azure.local"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure API key authorization: apim_key
configuration.api_key['apim_key'] = os.environ["API_KEY"]

# Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
# configuration.api_key_prefix['apim_key'] = 'Bearer'


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.DetectLanguageApi(api_client)
    show_stats = True # bool | (optional) if set to true, response will contain input and document level statistics. (optional)
    language_batch_input = openapi_client.LanguageBatchInput() # LanguageBatchInput | Collection of documents to analyze. (optional)

    try:
        # The API returns the detected language and a numeric score between 0 and 1.
        api_response = api_instance.detect_language(show_stats=show_stats, language_batch_input=language_batch_input)
        print("The response of DetectLanguageApi->detect_language:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling DetectLanguageApi->detect_language: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://azure.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DetectLanguageApi* | [**detect_language**](docs/DetectLanguageApi.md#detect_language) | **POST** /languages | The API returns the detected language and a numeric score between 0 and 1.
*EntitiesApi* | [**entities**](docs/EntitiesApi.md#entities) | **POST** /entities | The API returns a list of recognized entities in a given document.
*KeyPhrasesApi* | [**key_phrases**](docs/KeyPhrasesApi.md#key_phrases) | **POST** /keyPhrases | The API returns a list of strings denoting the key talking points in the input text.
*SentimentApi* | [**sentiment**](docs/SentimentApi.md#sentiment) | **POST** /sentiment | The API returns a numeric score between 0 and 1.


## Documentation For Models

 - [DetectedLanguage](docs/DetectedLanguage.md)
 - [DocumentStatistics](docs/DocumentStatistics.md)
 - [EntitiesBatchResult](docs/EntitiesBatchResult.md)
 - [EntitiesBatchResultItem](docs/EntitiesBatchResultItem.md)
 - [EntityRecord](docs/EntityRecord.md)
 - [ErrorRecord](docs/ErrorRecord.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [InternalError](docs/InternalError.md)
 - [KeyPhraseBatchResult](docs/KeyPhraseBatchResult.md)
 - [KeyPhraseBatchResultItem](docs/KeyPhraseBatchResultItem.md)
 - [LanguageBatchInput](docs/LanguageBatchInput.md)
 - [LanguageBatchResult](docs/LanguageBatchResult.md)
 - [LanguageBatchResultItem](docs/LanguageBatchResultItem.md)
 - [LanguageInput](docs/LanguageInput.md)
 - [MatchRecord](docs/MatchRecord.md)
 - [MultiLanguageBatchInput](docs/MultiLanguageBatchInput.md)
 - [MultiLanguageInput](docs/MultiLanguageInput.md)
 - [RequestStatistics](docs/RequestStatistics.md)
 - [SentimentBatchResult](docs/SentimentBatchResult.md)
 - [SentimentBatchResultItem](docs/SentimentBatchResultItem.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="apim_key"></a>
### apim_key

- **Type**: API key
- **API key parameter name**: Ocp-Apim-Subscription-Key
- **Location**: HTTP header


## Author

mlapi@microsoft.com


